<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_main"
                android:icon="@drawable/ic_home"
                android:title="@string/main"/>

        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_orders"
                android:title="@string/orders"/>
        <item
                android:id="@+id/nav_debt"
                android:icon="@drawable/ic_coin"
                android:title="@string/debtors"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/history"
                android:title="@string/history"/>
        <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/log_out"/>
    </group>

</menu>
