<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".splash.SplashActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg_input_view">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_user" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/login"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="#87ffffff" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg_input_view">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="#87ffffff" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/bg_button_main"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>