<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_store"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvShopName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="MegaPlanet MChJ"
                        android:layout_marginStart="4dp"
                />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_location"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_address"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvShopAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Ahmad Donish"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_calendar_clock"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliver_date"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDeliveryDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        tools:text="15.12.2018"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_currency_usd"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvOrderPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        tools:text="@string/order_price"
                        android:layout_gravity="center_vertical"
                />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_credit_card"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_marginStart="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_type_static"
                        android:layout_gravity="center_vertical"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPaymentType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        tools:text="Naqd"
                        android:layout_gravity="center_vertical"
                />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:id="@+id/ltStatusOrder"
            >
                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="4dp"
                        app:srcCompat="@drawable/ic_circle"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_status"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center_vertical"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvOrderStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        tools:text="Qabul qilingan"
                        android:layout_gravity="center_vertical"
                />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>