<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.OrderDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_input_view"
                    app:cardElevation="4dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="start"
                                app:srcCompat="@drawable/ic_store"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|start"
                                android:layout_marginStart="36dp"
                                android:text="@string/emporium_name"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvEmporiumName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|end"
                                android:textStyle="bold"
                                tools:text="Mega Planet MChJ"/>

                    </FrameLayout>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="start"
                                app:srcCompat="@drawable/ic_calendar_clock"
                                tools:ignore="VectorDrawableCompat"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|start"
                                android:layout_marginStart="36dp"
                                android:text="@string/deliver_date"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvDeliverDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|end"
                                android:textStyle="bold"
                                tools:text="15.12.2018"/>

                    </FrameLayout>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="start"
                                app:srcCompat="@drawable/ic_currency_usd"
                                tools:ignore="VectorDrawableCompat"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|start"
                                android:layout_marginStart="36dp"
                                android:text="@string/order"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvOrderCost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|end"
                                android:textStyle="bold"
                                tools:text="3 000 000 сум"/>

                    </FrameLayout>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="start"
                                app:srcCompat="@drawable/ic_credit_card"
                                tools:ignore="VectorDrawableCompat"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|start"
                                android:layout_marginStart="36dp"
                                android:text="@string/payment_type_static"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvPaymentType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|end"
                                android:textStyle="bold"
                                tools:text="Наличные"/>
                    </FrameLayout>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="start"
                                app:srcCompat="@drawable/ic_refresh"
                                tools:ignore="VectorDrawableCompat"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|start"
                                android:layout_marginStart="36dp"
                                android:text="@string/order_status"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvOrderStatus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|end"
                                android:text="@string/accepted"
                                android:textStyle="bold"/>
                    </FrameLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvEmptyData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/no_data_available"
                        android:textSize="24sp"
                        android:textColor="@color/colorPrimary"
                        android:visibility="gone"
                        android:layout_marginTop="64dp"
                />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvOrderDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        tools:itemCount="6"
                        tools:listitem="@layout/item_peer"/>

            </FrameLayout>

            <include
                    android:id="@+id/vLoading"
                    layout="@layout/view_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

            <include
                    android:id="@+id/vError"
                    layout="@layout/view_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>